stylesheet.css
/* page */
	body {
		margin: 0px;
		padding: 0px;
		border: 0px;
		background-color: white;
		width: 100vw;
		height: 100vh;
		overflow: hidden;
		font-family: Roboto Condensed;
		text-shadow: 0px 0px 2px black;
		font-size: 20px;
	}

	#attribution {
		display: block;
		font-size: 15px;
		text-decoration: none;
		text-shadow: none;
		font-weight: bold;
	}

/* menu */
	#menu {
		position: absolute;
		left: 50%;
		top: 50%;
		transform: translateX(-50%) translateY(-50%);
		text-align: center;
		background-color: pink;
		padding: 50px;
		border-radius: 20px;
		font-size: 50px;
	}

/* players */
	#players {
		float: left;
		width: 300px;
		height: 100vh;
		padding: 20px;
	}

	#player_title {
		font-size: 36px;
		text-align: center;
		font-weight: bold;
		height: 50px;
	}

	@media screen and (max-width: 980px) {
		#players {
			width: 100vw;
			height: auto;
		}

		#player_title {
			display: none;
		}
	}

	#player_list {
		overflow: scroll;
	}

	.player {
		width: 100%;
		padding: 10px;
		font-size: 24px;
	}

	.player_score {
		float: right;
	}

	.active {
		font-weight: bold;
		text-shadow: 0px 0px 5px white;
		background-color: darkgray;
		border-radius: 5px;
	}

/* gameboard */
	#gameboard {
		max-width: 100vw;
		max-height: 100vw;
		width: 100vh;
		height: 100vh;
		float: left;
		padding: 0px;
		margin: 0px;
		overflow: scroll;
	}

	.card_slot {
		float: left;
		height: 100px;
		padding: 5px;
		width: calc(100vw / var(--widthCount));
		height: calc(100vw / var(--widthCount));
		max-width: calc(100vh / var(--widthCount));
		max-height: calc(100vh / var(--widthCount));
	}

	.card {
		width: 100%;
		height: 100%;
		border-radius: 10px;
		padding: 5px;
	}

	.card_front {
		width: 100%;
		height: 100%;
		border-radius: 10px;
		padding: 10px;
		z-index: 1;
	}

	.card_text {
		text-align: center;
		position: relative;
		top: 50%;
		transform: translateY(-50%);
		color: white;
		text-shadow: 0px 0px 2px black;
		font-size: 20px;
	}

	.card_back {
		background-color: #333333;
		cursor: pointer;
		width: 100%;
		height: 100%;
		border-radius: 10px;
		padding: 10px;
		z-index: 2;
	}

	.card.facedown:hover {
		box-shadow: 0px 0px 20px white inset;
	}

/* setup */
	#setup_div {
		background-color:lightgray;
		width: 100vw;
		height: 100vh;
		overflow: scroll;
	}

	header {
		background-color: gray;
		width: 100vw;
		text-align: center;
		font-size: 30px;
		height: auto;
		margin-bottom: 10px;
		text-align: center;
		color: black;
	}

	#setup_div > header {
		background-color: black;
		color: white;
		font-weight: bold;
		font-size: 40px;
		position: fixed;
		top: 0px;
		z-index: 2;
	}

	#submitSetup {
		width: 10vw;
		height: auto;
	}

	.form-control::-webkit-input-placeholder {
		color: white;
	}

	.form-control::-moz-placeholder {
		color: white;
	}

	.form-control:-ms-input-placeholder {
		color: white;
	}

	.form-control:-moz-placeholder {
		color: white;
	}

/* setup players */
	#playerSection {
		margin-top: 57px;
	}

	#playerAdd {
		margin-top: 5px;
		margin-bottom: 5px;
		width: 100%;
	}

	input.setupPlayer {
		width: 90%;
		display: inline-block;
		float:left;
		background-color:darkgray;
	}

	button.playerRemove {
		width: 10%;
		display:inline-block;
		float: left;
	}

	/*#player1 {
		background-color: pink;
		color:red;
	}

	#player2 {
		background-color: lightblue;
		color: blue;
	}

	#player3 {
		background-color: lightgreen;
		color: green;
	}

	#player4 {
		background-color: plum;
		color: rebeccapurple;
	}*/

/* setup cards */
	#cardAdd {
		width: 100%;
		margin-top: 5px;
		margin-bottom: 5px;
	}

	.setupCard {
		width: 100%;
		height: 25vw;
		overflow: hidden;
	}

	.setupCard textarea {
		min-height: 80%;
		min-width: 100%;
		max-width: 100%;
		max-height: 80%;
		background-color: rgba(255, 255, 255, 0.3);
		color: white;
		text-shadow: 0px 0px 2px black;
		font-size: 18px;
		text-align: center;		
	}

	.setupCard input {
		background-color: rgba(255, 255, 255, 0.3);
		color: white;
		text-shadow: 0px 0px 2px black;
		font-size: 18px;
	}

	.L {
		display: inline-block;
		float: left;
		margin: 5px;
		color: darkgray;
		width: 25vw;
		height: 25vw;
		background-repeat: no-repeat;
	}

	.R {
		float: left;
		margin: 5px;
		color: darkgray;
		width: 25vw;
		height: 25vw;
		display: inline-block;
		background-repeat: no-repeat;
	}

	.cardRemove {
		width: 10%;
		float: right;
		display: inline-block;
		height: 10vw;
		margin-top: 7.5vw;
	}

